--- a/bootsrap.html
+++ b/bootsrap.html
@@ -6,9 +6,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Document</title>
 </head>
-<body>
+<body class="container">
+    <div class="border p-5">
     <h1>Hello world</h1>
-    <button class="btn btn-primary">click here</button>
+    <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam ullam ex, eius recusandae quam nulla saepe, minima perspiciatis provident veniam maiores eos labore mollitia consequuntur aliquid ipsam blanditiis laboriosam! Modi!
+</p>
+<button class="btn btn-primary">click here</button>
+</div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </html>
