--- a/bootsrap.html
+++ b/bootsrap.html
@@ -11,8 +11,16 @@
     <h1>Hello world</h1>
     <p>
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam ullam ex, eius recusandae quam nulla saepe, minima perspiciatis provident veniam maiores eos labore mollitia consequuntur aliquid ipsam blanditiis laboriosam! Modi!
-</p>
-<button class="btn btn-primary">click here</button>
+    </p>
+<button class="btn btn-outline-primary">click here</button>
+<button type="button" class="btn btn-outline-primary">Primary</button>
+<button type="button" class="btn btn-outline-secondary">Secondary</button>
+<button type="button" class="btn btn-outline-success">Success</button>
+<button type="button" class="btn btn-outline-danger">Danger</button>
+<button type="button" class="btn btn-outline-warning">Warning</button>
+<button type="button" class="btn btn-outline-info">Info</button>
+<button type="button" class="btn btn-outline-light">Light</button>
+<button type="button" class="btn btn-outline-dark">Dark</button>
 </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
