--- a/bootsrap.html
+++ b/bootsrap.html
@@ -8,19 +8,24 @@
 </head>
 <body class="container">
     <div class="border p-5">
-    <h1>Hello world</h1>
-    <p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam ullam ex, eius recusandae quam nulla saepe, minima perspiciatis provident veniam maiores eos labore mollitia consequuntur aliquid ipsam blanditiis laboriosam! Modi!
-    </p>
-<button class="btn btn-outline-primary">click here</button>
-<button type="button" class="btn btn-outline-primary">Primary</button>
-<button type="button" class="btn btn-outline-secondary">Secondary</button>
-<button type="button" class="btn btn-outline-success">Success</button>
-<button type="button" class="btn btn-outline-danger">Danger</button>
-<button type="button" class="btn btn-outline-warning">Warning</button>
-<button type="button" class="btn btn-outline-info">Info</button>
-<button type="button" class="btn btn-outline-light">Light</button>
-<button type="button" class="btn btn-outline-dark">Dark</button>
+    <p class="lead">Basic grid</p>
+    <div class="row">
+        <div class="col-sm-3 d-md-block border p-4">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit molestiae alias maiores minima voluptas ratione quibusdam autem voluptatum, delectus nam exercitationem mollitia omnis animi minus, labore consequuntur id quam cum!
+    </div>
+    <div class="col-sm-9 border p-4">
+        001
+    </div>
+</div>
+<div class="col-sm-9 border p-4">
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure, dolorem? Non, impedit! Sunt adipisci ea ratione sapiente, nihil animi, iste recusandae sed nesciunt fugit neque cupiditate quo molestias voluptas distinctio.
+</div>
+</div>
+<div class="col-sm-9 border p-4">
+    003
+</div>
+    
+</div>
 </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
