--- a/bootsrap.html
+++ b/bootsrap.html
@@ -7,26 +7,32 @@
     <title>Document</title>
 </head>
 <body class="container">
-    <div class="border p-5">
-    <p class="lead">Basic grid</p>
-    <div class="row">
-        <div class="col-sm-3 d-md-block border p-4">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit molestiae alias maiores minima voluptas ratione quibusdam autem voluptatum, delectus nam exercitationem mollitia omnis animi minus, labore consequuntur id quam cum!
-    </div>
-    <div class="col-sm-9 border p-4">
-        001
-    </div>
-</div>
-<div class="col-sm-9 border p-4">
-    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure, dolorem? Non, impedit! Sunt adipisci ea ratione sapiente, nihil animi, iste recusandae sed nesciunt fugit neque cupiditate quo molestias voluptas distinctio.
-</div>
-</div>
-<div class="col-sm-9 border p-4">
-    003
-</div>
-    
-</div>
-</div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-body-tertiary">
+        <div class="container">
+          <a class="navbar-brand" href="#">Navbar</a>
+          <button
+            data-mdb-collapse-init
+            class="navbar-toggler"
+            type="button"
+            data-mdb-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <i class="fas fa-bars"></i>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link" href="#">Features</a>
+              <a class="nav-link" href="#">Pricing</a>
+              <a class="nav-link disabled"
+                >Disabled</a
+              >
+            </div>
+          </div>
+        </div>
+      </nav>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </html>
